fixed history view where automatic overflow was not enabled (no scrollbar)

--- a/public/stylesheets/rails_admin/base.css
+++ b/public/stylesheets/rails_admin/base.css
@@ -148,6 +148,7 @@ height:70px;
 
 #content {
 background:#FFF;
+overflow: auto;
 }
 
 .ra-block .ui-widget-header {
